# CCIMXDesktop

./: .gitignore  AP3216CAdapterFactory_8h_source.html  AboutMainWindow_8h_source.html  AddPanel_8h_source.html  AppLauncherApp_8h_source.html  AppWeatherRequest_8h_source.html  AppWidgetConfigures_8h_source.html  ApplicationLauncherMainWindow_8h_source.html  AutoStepInitTask_8h_source.html  AutoStepIniter_8h_source.html  BackLightControllerSingleton_8h_source.html  BacklightControllerImpl_8h_source.html  BacklightController_8h_source.html  BatteryStatusbarIcon_8h_source.html  BinaryOpTreeNode_8h_source.html  BirdObsticals_8h_source.html  BlurExample_8h_source.html  BlurProcessor_8h_source.html  BonusFunctor_8h_source.html  BoundProgressBarFactory_8hpp_source.html  CCIMXDesktopLoggerCenter_8h_source.html  CCIMXFileSystemModel_8h_source.html  CCIMXNoter_2settings_8h_source.html  CCIMX__DesktopSplashWindow_8h_source.html  CCMediaPlayList_8h_source.html  CCNoterWindow_8h_source.html  CMakeLists.txt  CPUStateFetcher_8h_source.html  CPUUsageChart_8h_source.html  CactusObsticals_8h_source.html  CaculatorMainWindow_8h_source.html  CalendarWindow_8h_source.html  CameraCapture_8h_source.html  CameraDeviceSelector_8h_source.html  CameraDisplayWidget_8h_source.html  CameraWindow_8h_source.html  CannyExample_8h_source.html  CannyProcessor_8h_source.html  CardStackWidget_8h_source.html  ChatBubble_8h_source.html  (+2389 more)
Documentations/: README.md  (+3 more)
builtin/app/CCCalendar/: CMakeLists.txt  CalendarWindow.cpp  CalendarWindow.h  CalendarWindow.ui  main.cpp
builtin/app/Caculator/: CMakeLists.txt  main.cpp
builtin/app/DesktopAbout/: AboutMainWindow.h  CMakeLists.txt  main.cpp
builtin/app/ImageWalker/: CMakeLists.txt  main.cpp
builtin/app/SimpleDrawer/: CMakeLists.txt  main.cpp  settings.h
extern_app/: CMakeLists.txt  README.md
extern_app/CCommunicator/: CMakeLists.txt
extern_app/EasyNotes/: CMakeLists.txt  main.cpp
extern_app/EasyNotes/core/: TemperaryCacher.cpp  TemperaryCacher.h
extern_app/EasyNotes/sources/: icons.qrc
extern_app/EasyNotes/ui/: EasyNoteMainWindow.cpp  EasyNoteMainWindow.h  EasyNoteMainWindow.ui  LeftSideBar.cpp  LeftSideBar.h  LeftSideBar.ui  MainSideBar.cpp  MainSideBar.h  MainSideBar.ui  SideBarWidget.cpp  SideBarWidget.h
extern_app/FileRamber/: CMakeLists.txt  README.md
extern_app/FileRamber/Core/: DirentSizeCounter.cpp  DirentSizeCounter.h  FileCountInfo.cpp  FileCountInfo.h  FileInfoProvider.cpp  FileInfoProvider.h  FileNameProviders.cpp  FileNameProviders.h  FileRamberTools.cpp  FileRamberTools.h  FileTypeInfo.cpp  FileTypeInfo.h
extern_app/FileRamber/Ui/: CCIMXFileSystemModel.cpp  CCIMXFileSystemModel.h  FileInfoDisplayWidget.cpp  FileInfoDisplayWidget.h  FileInfoDisplayWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
extern_app/FileRamber/source/: icons.qrc
extern_app/GeneralLocalCamera/: CMakeLists.txt  README.md  main.cpp
extern_app/GeneralLocalCamera/Core/: CameraCapture.cpp  CameraCapture.h  CameraDeviceSelector.cpp  CameraDeviceSelector.h  PhotoSaver.cpp  PhotoSaver.h
extern_app/GeneralLocalCamera/Ui/: CameraDisplayWidget.cpp  CameraDisplayWidget.h  CameraDisplayWidget.ui  CameraWindow.cpp  CameraWindow.h  CameraWindow.ui  DesktopToast.cpp  DesktopToast.h
extern_app/GeneralLocalCamera/sources/: icons.qrc
extern_app/LocalCamera/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
extern_app/LocalCamera/sources/: icons.qrc
extern_app/MediaPlayer/: CMakeLists.txt  README.md  main.cpp
extern_app/MediaPlayer/base/: CVImage.cpp  CVImage.h  CVImageImpl.h  CVImagePrivateOpencvImp.cpp  CVImagePrivateOpencvImp.h  CVTools.h  MediaPlayer.cpp  MediaPlayer.h  QtAdaptTools.h  VideoPlayer.cpp  VideoPlayer.h  VideoPlayerImpl.h  VideoPlayerOpencvImpl.cpp
extern_app/MediaPlayer/core/: CCMediaPlayList.cpp  CCMediaPlayList.h  MediaEnableSelectFactory.cpp  MediaEnableSelectFactory.h  UiTools.cpp  UiTools.h
extern_app/MediaPlayer/sources/: icons.qrc
extern_app/MediaPlayer/ui/: DiskMusic.cpp  DiskMusic.h  DiskMusic.ui  MediaInfoWindow.cpp  MediaInfoWindow.h  MediaInfoWindow.ui  MediaPlayerWindow.cpp  MediaPlayerWindow.h  MediaPlayerWindow.ui  PlayListMainWindow.cpp  PlayListMainWindow.h  PlayListMainWindow.ui  ScrollingLabel.cpp  ScrollingLabel.h  ScrollingLabel.ui
extern_app/NetHelper/: CMakeLists.txt  main.cpp
extern_app/NetHelper/sources/: icons.qrc
extern_app/NetHelper/ui/: InterfacesDisplayWidget.cpp  InterfacesDisplayWidget.h  InterfacesDisplayWidget.ui  MainShowWidget.cpp  MainShowWidget.h  MainShowWidget.ui  NetMainWindow.cpp  NetMainWindow.h  NetMainWindow.ui  Pinger.cpp  Pinger.h  Pinger.ui  Scanner.cpp  Scanner.h  Scanner.ui  SideBarWidget.cpp  SideBarWidget.h  SideBarWidget.ui  ToolBoxs.cpp  ToolBoxs.h  ToolBoxs.ui  fasttools.h
extern_app/SystemState/: CMakeLists.txt  README.md  main.cpp
extern_app/SystemState/Core/: CPUStateFetcher.cpp  CPUStateFetcher.h  MemoryInfoFetcher.cpp  MemoryInfoFetcher.h  ProcessBroswer.cpp  ProcessBroswer.h
extern_app/SystemState/Ui/: CPUUsageChart.cpp  CPUUsageChart.h  CPUUsageChart.ui  MemoryUsageChart.cpp  MemoryUsageChart.h  MemoryUsageChart.ui  ProcessBrowserWidget.cpp  ProcessBrowserWidget.h  ProcessBrowserWidget.ui  SystemStateWindow.cpp  SystemStateWindow.h  SystemStateWindow.ui  stackpage_switcher_animation.h
extern_app/SystemState/sources/: icons.qrc
extern_app/WeatherApp/: CMakeLists.txt  README.md  main.cpp
extern_app/WeatherApp/Core/: AppWeatherRequest.cpp  AppWeatherRequest.h  MyWeatherRequest.cpp  MyWeatherRequest.h
extern_app/WeatherApp/MainWindow/: WeatherAppMainWindow.cpp  WeatherAppMainWindow.h  WeatherAppMainWindow.ui
extern_app/WeatherApp/Ui/: DesktopToast.cpp  DesktopToast.h  StackPageSwitcher.cpp  StackPageSwitcher.h  WeatherChartWidget.cpp  WeatherChartWidget.h  WeatherChartWidget.ui  WeatherDailyCard.cpp  WeatherDailyCard.h  WeatherDailyCard.ui
extern_app/games/: CMakeLists.txt
extern_app/pdfReader/: CMakeLists.txt  README.md  icons.qrc
extern_app/professionals/: CMakeLists.txt  README.md
plugin_loader/plugin_cards/: CMakeLists.txt
(+2039 files in other folders)
